@@ -46,6 +46,7 @@ Template for new versions:
 - `confirm`: added confirmation dialog for right clicking out of the trade agreement screen (so your trade agreement selections aren't lost)
 - `gui/autobutcher`: interface redesigned to better support mouse control
 - `gui/launcher`: now persists the most recent 32KB of command output even if you close it and bring it back up
+- `gui/quickcmd`: clickable buttons for command add/remove/edit operations
 
 ## Removed
 
